--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -17,9 +17,10 @@
           <h6>Filtro de etiquetas</h6>
         </div>
         <div class="file_search">
-
+          <input #searchInput type="text" placeholder="Buscar archivos..." (input)="searchFiles(searchInput.value)">
+          <span class="search_icon"></span>
         </div>
-        <div style="width: 95%;">
+        <div class="file_type_filter" style="width: 95%;">
           <label for="location" class="block text-sm font-medium text-gray-700" style="margin-bottom: 5px; margin-top: 12px;">Tipo de archivo: </label>
           <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
             <option></option>
@@ -60,7 +61,7 @@
                 </h2>
                 <a
                   class="mt-4 text-gray-600"
-                  [href]="getFileUrl(file)"
+                  [href]="getFileUrl(file.name)"
                   target="_blank"
                   >Haz click para ver el archivo</a
                 >
@@ -68,7 +69,7 @@
                 <br />
                 <br />
                 <button
-                  (click)="deleteFile(file)"
+                  (click)="deleteFile(file.name)"
                   data-ripple-light="true"
                   data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
