Filtro de búsqueda por archivos completo

--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -22,15 +22,17 @@
         </div>
         <div class="file_type_filter" style="width: 95%;">
           <label for="location" class="block text-sm font-medium text-gray-700" style="margin-bottom: 5px; margin-top: 12px;">Tipo de archivo: </label>
-          <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-            <option></option>
-            <option>Documento Word</option>
-            <option>PDF</option>
-            <option>Audio</option>
-            <option>Video</option>
-            <option>PowerPoint</option>
-            <option>Imagen</option>
-          </select>
+          <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
+        (change)="filterFilesByType($event)">
+  <option></option>
+  <option value="Documento Word">Documento Word</option>
+  <option value="PDF">PDF</option>
+  <option value="Audio">Audio</option>
+  <option value="Video">Video</option>
+  <option value="PowerPoint">PowerPoint</option>
+  <option value="Imagen">Imagen</option>
+</select>
+
         </div>
         <div style="width: 95%;">
           <label for="location" class="block text-sm font-medium text-gray-700" style="margin-bottom: 5px; margin-top: 24px;">Curso de idiomas: </label>
