--- a/client/src/app/components/tag-manager/tag-manager-add-tag/tag-manager-add-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-add-tag/tag-manager-add-tag.component.html
@@ -21,12 +21,12 @@
     </select>
   </div>  
   <div *ngIf="selectedCategory === 'Nuevo submódulo para curso de idiomas'">
-    <label for="course" class="mb-1 mt-4 block text-sm font-medium text-gray-700 py-3">Selecciona el módulo al que pertenece el submódulo: </label>
-    <select id="course" name="course" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" [(ngModel)]="selectedSubCategory">
-      <option disabled selected value="">Selecciona una opción</option>
-      <option *ngFor="let module of modules">{{ module.nombre }}</option>
+    <label for="module" class="mb-1 mt-4 block text-sm font-medium text-gray-700 py-3">Selecciona el módulo al que pertenece el submódulo: </label>
+    <select id="module" name="module" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" [(ngModel)]="selectedSubCategory">
+        <option disabled selected value="">Selecciona una opción</option>
+        <option *ngFor="let module of modules">{{ module.nombre }}</option>
     </select>
-  </div>  
+  </div> 
   <div *ngIf="selectedCategory === 'Nuevo curso de idiomas' || (selectedCategory === 'Nuevo módulo para curso de idiomas' && selectedCourse) || (selectedCategory === 'Nuevo submódulo para curso de idiomas' && selectedSubCategory)" style="margin-top: 25px;">
     <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" (click)="createTag()">Crear</button>
   </div>  
