Primera prueba exitosa para borrar etiquetas a través de la pestaña Borrar etiqueta

--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -4,7 +4,7 @@
     <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a editar:</label>
     <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
     (change)="onSelectOption()">
-      <option></option>
+    <option disabled selected value="">Selecciona una opción</option>
       <option>8A</option>
       <option>8B</option>
       <option>Conversation</option>
