--- a/client/src/app/components/tag-manager/tag-manager-delete-tag/tag-manager-delete-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-delete-tag/tag-manager-delete-tag.component.html
@@ -10,6 +10,6 @@
     <p>Una vez que borres la etiqueta, se desasignarán todas las etiquetas a los archivos</p>
   </div>
   <div class="mt-5" *ngIf="selectedOption">
-    <button type="button" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">Borrar etiqueta</button>
+    <button type="button" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm" (click)="deleteSelectedTag()">Borrar etiqueta</button>
   </div>
 </div>
