--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -2,12 +2,10 @@
   <br />
   <div>
     <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a editar:</label>
-    <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
-    (change)="onSelectOption()">
-    <option disabled selected value="">Selecciona una opción</option>
-      <option>8A</option>
-      <option>8B</option>
-      <option>Conversation</option>
+    <!-- Modifica el primer selector para usar las etiquetas recuperadas del servicio -->
+    <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onSelectOption()">
+      <option disabled selected value="">Selecciona una opción</option>
+      <option *ngFor="let tag of tags">{{ tag }}</option>
     </select>
   </div>
   <br />
@@ -27,7 +25,16 @@
       </select>
     </div>
     <br />
-    <div *ngIf="selectedCategory === 'Nuevo módulo para curso de idiomas' || selectedCategory === 'Nuevo submódulo para curso de idiomas'">
+    <div *ngIf="selectedCategory === 'Nuevo módulo para curso de idiomas'">
+      <label for="course" class="block text-sm font-medium text-gray-700">Selecciona el curso al que pertenece el módulo: </label>
+      <select id="course" name="course" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onCourseChange($event)">
+        <option disabled selected value="">Selecciona una opción</option>
+        <option>Inglés</option>
+        <option>Francés</option>
+        <option>Español</option>
+      </select>
+    </div>
+    <div *ngIf="selectedCategory === 'Nuevo submódulo para curso de idiomas'">
       <label for="course" class="block text-sm font-medium text-gray-700">Selecciona el curso al que pertenece el módulo: </label>
       <select id="course" name="course" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onCourseChange($event)">
         <option disabled selected value="">Selecciona una opción</option>
