--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -34,12 +34,10 @@
     </div>
     <div *ngIf="selectedCategory === 'Nuevo submódulo para curso de idiomas'">
       <label for="course" class="block text-sm font-medium text-gray-700">Selecciona el curso al que pertenece el módulo: </label>
-      <select id="course" name="course" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onCourseChange($event)">
-        <option disabled selected value="">Selecciona una opción</option>
-        <option>Inglés</option>
-        <option>Francés</option>
-        <option>Español</option>
-      </select>
+      <select id="module" name="module" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" [(ngModel)]="selectedModule">
+        <option disabled selected value="">Selecciona un módulo</option>
+        <option *ngFor="let module of modules">{{ module.nombre }}</option>
+      </select>      
     </div>
     <br />
     <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200" *ngIf="selectedCategory === 'Nuevo curso de idiomas' || ((selectedCategory === 'Nuevo módulo para curso de idiomas' || selectedCategory === 'Nuevo submódulo para curso de idiomas') && selectedCourse)">Guardar cambios</button>
