--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -40,8 +40,6 @@
       </select>      
     </div>
     <br />
-    <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200" *ngIf="selectedCategory === 'Nuevo curso de idiomas' || ((selectedCategory === 'Nuevo módulo para curso de idiomas' || selectedCategory === 'Nuevo submódulo para curso de idiomas') && selectedCourse)">Guardar cambios</button>
+    <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200" *ngIf="selectedCategory === 'Nuevo curso de idiomas' || selectedCourse || selectedModule">Guardar cambios</button>
   </ng-container>
 </div>
-
-
