--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -12,7 +12,7 @@
   <ng-container *ngIf="optionSelected">
     <div class="relative border border-gray-300 rounded-md px-4 py-2 shadow-sm focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
       <label for="name" class="absolute -top-2 left-2 -mt-px inline-block px-1 bg-white text-xs font-medium text-gray-900">Nombre de la etiqueta</label>
-      <input type="text" name="name" id="name" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" [value]="selectedTag">
+      <input type="text" name="name" id="name" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" [(ngModel)]="selectedTag">
     </div>
     <br />
     <div>
