--- a/client/src/app/components/tag-manager/tag-manager-assign-tags/tag-manager-assign-tags.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-assign-tags/tag-manager-assign-tags.component.html
@@ -2,11 +2,9 @@
   <div style="width: 100%;">
     <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a asignar a los archivos:</label>
     <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
-            (change)="onSelectOption()">
+        (change)="onSelectOption()">
       <option disabled selected value="">Selecciona una opción</option>
-      <option>8A</option>
-      <option>8B</option>
-      <option>Conversation</option>
+      <option *ngFor="let tag of tags">{{ tag }}</option> <!-- Genera opciones dinámicamente -->
     </select>
   </div>
   <br />
@@ -32,6 +30,9 @@
           <option>Imagen</option>
         </select>
       </div>
+      <div style="margin-top: 25px;">
+        <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Asignar etiqueta</button>
+      </div>  
     </div>
     <div class="assign-tags_column">
       <fieldset class="members-fieldset">
